# larzuk

./: .editorconfig  README.md  pyproject.toml
src/larzuk/: __init__.py  __main__.py  migrate.py
src/larzuk/commands/: up.py
tests/: test_migrate.py
tests/res/migrations/: 01_test1.py  02_test2.py
