[tool.poetry]
name = "larzuk"
version = "0.1.0"
description = "A command-line tool to help user to modify game data in Python codes for Diablo II: Resurrected."
authors = ["Garrett HE <garrett.he@hotmail.com>"]
license = "GPL-3.0"
readme = "README.md"
homepage = "https://github.com/he-yaowen/larzuk"
packages = [{include = "larzuk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8,<3.12"
click = "^8.1.3"
d2txt = "^0.5.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
larzuk = "larzuk.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
